Fixed formatting issue on login page where there was a 56px white space at the top of the page.

--- a/mobile/src/pages/login/login.scss
+++ b/mobile/src/pages/login/login.scss
@@ -11,6 +11,7 @@ page-login {
 
   .login-content {
        background: #151A1D;
+       margin-top:0px;
  
     .logo-row {
       padding-top: 50px;
